--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -14,7 +14,8 @@
 	<ItemGroup>
   	  <PackageReference Include="Dapper" Version="2.1.15" />
   	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
-  	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.12" />
+	  <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
+	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.12" />
   	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
   	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
