--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -15,9 +15,10 @@
   	  <PackageReference Include="Dapper" Version="2.1.15" />
   	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
 	  <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
-	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.12" />
   	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
   	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  	  <PackageReference Include="NRedisStack" Version="0.10.1" />
+  	  <PackageReference Include="RedLock.net" Version="2.3.2" />
   </ItemGroup>
 	
 </Project>
