--- a/PacketGenerator/PacketGenerator.csproj
+++ b/PacketGenerator/PacketGenerator.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.25.1" />
+  </ItemGroup>
 </Project>
