--- a/TCPServerExample/TCPServerExample.csproj
+++ b/TCPServerExample/TCPServerExample.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\TCPServerCore\TCPServerCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
